# this.me

./: .gitignore  FullTrailer.md  Fulltrailer2.md  README.md  Servicios.md  deploy-gh-pages.sh  index.html  index.js  jsdoc.json  package-lock.json  package.json
cargo/: Cargo.toml  README.md
cargo/src/: cli.rs  lib.rs  main.rs  me.rs  setup.rs  verbs.rs
cargo/src/utils/: mod.rs  setup.rs  update.rs  validate_input.rs
cargo/tests/: test_me.rs
crate/: Cargo.toml  README.md  next.md  specs.md
crate/src/: cli.rs  host.rs  lib.rs  main.rs  manager.rs  me.rs  neurons.rs  ontology.hsib.json  owns.rs  verbs.rs
crate/src/Link/: mod.rs
crate/src/core/: me.rs  mod.rs  model.rs  store.rs  verbs.rs
crate/src/db/: db.rs  migrate_schema.rs  mod.rs
crate/src/db/pg/: migrate.rs  store.rs
crate/src/qrcode/: mod.rs
crate/src/subjects/: mod.rs
crate/src/utils/: crypto.rs  have.rs  me_error.rs  validate_input.rs
crate/tests/: test_me.rs
docs/: 001-me.md  Axioms.html  Builds.html  Campos de identidad cifrada.md  How ALL.THIS Setup Works.md  IMPORTANT.md  Memory.html  Operators.html  Phases.html  ProductionORDev.md  README.md  Shared-Meaning.html  Syntax.html  This.module_Me.html  Thoughts.html  Understanding Git Submodules.md  WHITEPAPER.md  index.html  index.js.html  me Identity Model.md  model_Affinity.md
docs/assets/: Axioms.md.DrJezzNR.lean.js  Builds.md.Bu9yGv75.js  Builds.md.Bu9yGv75.lean.js  Memory.md.D3pnyg_C.js  Memory.md.D3pnyg_C.lean.js  Operators.md.DfTpp5k9.lean.js  Phases.md.BaCqvES9.js  Shared-Meaning.md.z8HYX_Y1.lean.js  Syntax.md.BLOS47Sw.lean.js  Thoughts.md.D9r6XLLA.lean.js  es_Espacios Semanticos.md.DLbqNB3F.lean.js  examples_Shops_Admin.md.D9smE8fi.js  examples_Social_Graph.md.B-d-xV4p.js  examples_WalletSplit.md.Bb2dPYKo.js  examples_WalletSplit.md.Bb2dPYKo.lean.js  guides_Secrets.md._8GJQuWO.js  guides_Secrets.md._8GJQuWO.lean.js  index.md.Bntvb-pa.js  kernel_Benchmarks.md.IHRrAmbJ.js  kernel_Benchmarks.md.IHRrAmbJ.lean.js  kernel_Core.md.CyMkWarL.js  kernel_Intelligence.md.D086Lpoa.lean.js  old_Fractalismo.md.CREDcQQ9.js  old_How ALL.THIS Setup Works.md.C46IeBG7.js  old_How ALL.THIS Setup Works.md.C46IeBG7.lean.js  old_ProductionORDev.md.CYxIwiPx.js  old_Understanding Git Submodules.md.4HgA4ejV.js  old_WHITEPAPER.md.C-w8fKqT.lean.js  old_me Identity Model.md.B3EHoKld.js  old_next.md.Cz1Q7u4i.lean.js  old_notes_Index of this.me Structure.md.47U3r-sy.lean.js  old_notes_hot_encoding.md.eP9x5kAW.js  old_notes_model.md.BgBwOj3X.lean.js  tests_Build-Compatibility.md.8pNY7uqB.js  tests_Overview.md.DrH8DPIb.js  tests_Overview.md.DrH8DPIb.lean.js
docs/assets/chunks/: framework.Dp8pQZZ9.js
docs/examples/: Shops_Admin.html  WalletSplit.html
docs/guides/: Secrets.html
docs/kernel/: Benchmarks.html  Core.html  Intelligence.html
docs/notes/: 001-me.md  Entonces_Que_es_me.md  Index of this.me Structure.md  Questions.md  The Problem: Decentralized Yet Trustworthy.md
docs/old/: Fractalismo.html  How ALL.THIS Setup Works.html  IMPORTANT.html  WHITEPAPER.html  next.html
docs/old/notes/: Entonces_Que_es_me.html  Index of this.me Structure.html  Questions.html  The Problem: Decentralized Yet Trustworthy.html  model.html
docs/tests/: Axioms-and-Phases.html  Examples-and-Contracts.html  Overview.html  Performance.html
md/: Inmutabilidad_de_la_Identidad_basica.md  Questions.md  context.md  hot_encoding.md
me.crate/: Cargo.toml  README.md  me_restore.sh  next.md
me.crate/src/: cli.rs  lib.rs
me.crate/src/core/: me.rs
me.crate/src/utils/: mod.rs
me.npm/: README.md  package-lock.json
me.npm/notes/: avances.md  intro.md
me.npm/src/browser/: me.browser.js  me.session.js
notes/: Entonces_Que_es_me.md  Index of this.me Structure.md  Inmutabilidad_de_la_Identidad_basica.md  Understanding me && you && himContext.md
npm/: LICENSE  README.md  index.html  index.js  index.ts  package.json  rollup.config.js  tsconfig.json  typedoc.json  vite.config.js  vite.config.ts
npm/docs/: Axioms.md  Memory.md  Operators.md  Phases.md  Shared-Meaning.md  Syntax.md  docs.md  index.md
npm/docs/.vitepress/: config.mts  config.ts
npm/docs/examples/: Social_Graph.md
npm/docs/guides/: Secrets.md
npm/docs/kernel/: Benchmarks.md  Core.md
npm/notes/: Identities.md  Index.md  Summary.md  The Problem: Decentralized Yet Trustworthy.md  What .me Handles.md  build.md  intro.md
npm/src/: crypto.ts  handleCall.ts  me.js  me.ts  operators.ts  postulate.ts  tests.ts  types.ts
npm/tests/: axioms.test.ts  benchmark.2.test.ts  benchmark.3.tests.ts  benchmark.test.ts  example.ts  me.secrets.test.ts  phases.test.js  pre-build.test.mjs  sand.ts  test-cjs.cjs  test-esm.mjs  ts.ts  umd.html
src/: example.js  me.js
src/methods/: attributes.js  identity.js
(+81 files in other folders)
