[package]
name = "this-me"
version = "0.1.0"
authors = ["suiGn <admin@neurons.me>"]
edition = "2021"
description = "Encrypted identity store CLI tool (this.me)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/this.me"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["identity", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
