[package]
name = "this-me"
version = "0.1.3"
authors = ["suiGn <admin@neurons.me>"]
edition = "2021"
description = "Encrypted identity store CLI tool (this.me)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/this.me"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["identity", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "me"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1", features = ["derive"] }
dirs = "5" 
regex = "1"
chrono      = { version = "0.4", features = ["serde"] }