[package]
name = "this-me"
version = "0.2.2"
edition = "2021"
authors = ["suiGn <admin@neurons.me>"]
description = ".me identity engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neurons-me/this.me"
homepage = "https://neurons.me"
readme = "README.md"
keywords = ["identity", "hashing", "cryptography"]
categories = ["cryptography"]
default-run = "me"

[dependencies]  
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = "4.2.3"

[[bin]]
name = "me"
path = "src/main.rs"
